--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
-IMAGEEndpoint = https://ik.imagekit.io/rsal447pf/
-publicKey = public_h9l4jXo679VVJ37SOhuCIpspGpM=
+# IMAGEEndpoint = https://ik.imagekit.io/rsal447pf/
+# publicKey = public_h9l4jXo679VVJ37SOhuCIpspGpM=
 
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_a2luZC1qZW5uZXQtMzAuY2xlcmsuYWNjb3VudHMuZGV2JA
