--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.45.0",
     "@imagekit/react": "^5.0.1",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
