--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 MONGO = mongodb+srv://shivablog:shivadb@blogapp.ormk1cz.mongodb.net/?retryWrites=true&w=majority&appName=BlogApp
+CLERK_WEBHOOKS_SECRET = whsec_Olkf0G3ard5Wec/9+Y30qTQZPEKaFrb/
