--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
     "@clerk/express": "^1.7.30",
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "nodemon": "^3.1.10",
     "svix": "^1.76.1"
