created signin route and controller in server folder

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 MONGO = mongodb+srv://shivablog:shivadb@blogapp.ormk1cz.mongodb.net/?retryWrites=true&w=majority&appName=BlogApp
-CLERK_WEBHOOKS_SECRET = whsec_+fAsT2bBOPmmpt1ovuaX47Ko2Lp0qLOO
+JWT_SECRET = "shiva"
