--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@imagekit/react": "^5.0.1",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.536.0",
@@ -23,7 +24,9 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^7.8.2"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
