created google authentcation in client folder

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,1 @@
-# IMAGEEndpoint = https://ik.imagekit.io/rsal447pf/
-# publicKey = public_h9l4jXo679VVJ37SOhuCIpspGpM=
-
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_a2luZC1qZW5uZXQtMzAuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_FIREBASE_API_KEY = "AIzaSyCgDJC9cXorJPc_qh85ETH-odU4CsNCOIg"
