--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@imagekit/react": "^5.0.1",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
+    "firebase": "^12.3.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.536.0",
     "next-themes": "^0.4.6",
